--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.451.0",
     "next": "14.2.14",
+    "openai": "^4.67.3",
     "react": "^18",
     "react-dom": "^18",
     "react-swipeable": "^7.0.1",
