--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^18",
     "react-swipeable": "^7.0.1",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
