--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@types/leaflet": "^1.9.12",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.451.0",
     "next": "14.2.14",
     "openai": "^4.67.3",
     "pg": "^8.13.0",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-swipeable": "^7.0.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
@@ -45,7 +48,7 @@
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^9.12.0",
